# space-ai

./: .gitignore  README.md  all_paper_exp.sh  build.py  get_all_results.sh  pyproject.toml  run_all_experiments.py  run_all_paper_exp.sh
all_results/: esa_results.csv  nasa_results.csv  ops_results.csv  summary_all.csv
docs/: conf.py
dpmm_env/: pyvenv.cfg
examples/: ecoGrow_prompt_tuning.py  esa_esn_gb_experiment.py  esa_esn_rr_experiment.py  esa_lstm_experiment.py  example_dpmm_wrapper.py  nasa_dpmm_experiment.py  nasa_esn_gb_experiment.py  nasa_esn_rr_experiment.py  nasa_lstm_experiment.py  nasa_rocket_experiment.py  ops_sat_dpmm_experiment.py  ops_sat_esn_gb_experiment.py  ops_sat_rockad_experiment.py  ops_sat_rocket_experiment.py  run_all_exps.py  run_segment_extraction_exp.py  run_telemanom_exp.py
examples/utils/: config.py  dataset_exp.py  model_creators.py  results_reader.py
experiments_True_none/exp/: results.csv
paper_examples/: config.py  dataset_exp.py  esa_dpmm_likelihood_experiment.py  esa_dpmm_new_cluster_experiment.py  esa_logistic_regression_experiment.py  esa_ocsvm_experiment.py  esa_rockad_experiment.py  esa_rocket_dpmm_likelihood_experiment.py  esa_rocket_dpmm_new_cluster_experiment.py  esa_rocket_logistic_regression_experiment.py  esa_rocket_ocsvm_experiment.py  esa_rocket_xgboost_experiment.py  esa_xgboost_experiment.py  model_creators.py  nasa_dpmm_experiment.py  nasa_dpmm_likelihood_experiment.py  nasa_dpmm_new_cluster_experiment.py  nasa_ocnn_experiment.py  nasa_ocsvm_experiment.py  nasa_rockad_experiment.py  nasa_rocket_dpmm_experiment.py  nasa_rocket_dpmm_new_clusters.py  nasa_rocket_ocnn_experiment.py  nasa_rocket_ocsvm_experiment.py  ops_sat_dpmm_experiment.py  ops_sat_dpmm_likelihood_experiment.py  ops_sat_dpmm_new_cluster_experiment.py  ops_sat_ocsvm.py  ops_sat_ridge.py  ops_sat_rockad_experiment.py  ops_sat_rocket_dpmm_experiment.py  ops_sat_rocket_dpmm_likelihood_experiment.py  ops_sat_rocket_dpmm_new_cluster_experiment.py  ops_sat_rocket_ocsvm.py  ops_sat_rocket_ridge.py  ops_sat_rocket_xgboost_experiment.py  ops_sat_xgboost_experiment.py  results_reader.py  run_all_exps.py  run_exp.py  (+1 more)
spaceai/: __init__.py
spaceai/benchmark/: __init__.py  benchmark.py  esa.py  nasa.py  ops_sat.py
spaceai/data/: __init__.py  anomaly_dataset.py  esa.py  nasa.py  ops_sat.py  plant_datamodule.py  plant_dataset.py  utils.py
spaceai/models/: __init__.py
spaceai/preprocessing/: __init__.py  functions.py  spaceai_segmentator.py
spaceai/segmentators/: __init__.py  esa_segmentator.py  functions.py  nasa_segmentator.py  ops_sat_segmentator.py  (+1 more)
(+22 files in other folders)
